# ghcide-plugin-bug-repro

./: .gitignore  README.md  cabal.project  hie.yaml  stack.yaml
toy-package-a/: toy-package-a.cabal
toy-package-a/src/Data/: Tuple.hs
toy-package-a/src/Toy/: A.hs
toy-package-target/: Main.hs  toy-package-target.cabal
toy-plugin/: toy-plugin.cabal
toy-plugin/src/: ToyPlugin.hs
